--- a/sdk/trts/Makefile
+++ b/sdk/trts/Makefile
@@ -54,6 +54,7 @@ OBJS1 := init_enclave.o  \
         trts_xsave.o     \
         init_optimized_lib.o \
         trts_version.o \
+        trts_interrupt.o  \
         trts_add_trim.o
 
 OBJS2 := trts_nsp.o
