--- a/sdk/simulation/urtssim/linux/Makefile
+++ b/sdk/simulation/urtssim/linux/Makefile
@@ -122,7 +122,6 @@ LDFLAGS += $(COMMON_LDFLAGS) -Wl,--version-script=$(LINUX_PSW_DIR)/urts/linux/ur
 
 LIBURTSSIM_SHARED := libsgx_urts_sim.so
 LIBURTSSIM_STATIC := libsgx_urts_sim.a
-LIBURTSSIM_STATIC_WITH_EVENT := libsgx_urts_sim_with_se_event.a
 LIBURTSSIM_DEBUG := libsgx_urts_sim.so.debug
 LIBURTS_DEPLOY := libsgx_urts_deploy.so
 
@@ -130,10 +129,9 @@ LDLIBS  += -lwrapper -lcrypto -Wl,-Bdynamic -Wl,-Bsymbolic -lsgx_uae_service_sim
 SONAME = $(LIBURTSSIM_SHARED)
 
 .PHONY: all
-all: $(LIBURTSSIM_SHARED) $(LIBURTSSIM_STATIC) $(LIBURTSSIM_STATIC_WITH_EVENT) $(LIBURTSSIM_DEBUG) $(LIBURTS_DEPLOY)| $(BUILD_DIR)
+all: $(LIBURTSSIM_SHARED) $(LIBURTSSIM_STATIC) $(LIBURTSSIM_DEBUG) $(LIBURTS_DEPLOY)| $(BUILD_DIR)
 	$(CP) $(LIBURTSSIM_SHARED) $|
 	$(CP) $(LIBURTSSIM_STATIC) $|
-	$(CP) $(LIBURTSSIM_STATIC_WITH_EVENT) $|
 	$(CP) $(LIBURTS_DEPLOY) $|
 ifndef DEBUG
 	$(CP) $(LIBURTSSIM_DEBUG) $|
@@ -143,15 +141,6 @@ $(LIBURTSSIM_SHARED): simasm uinst driver_api wrapper uae_service_sim $(OBJ) $(O
 	$(CXX) $(CXXFLAGS) -shared -Wl,-soname=$(SONAME) $(OBJ) $(OBJ6) $(LDFLAGS) $(LDLIBS) -o $@
 
 $(LIBURTSSIM_STATIC): $(LIBURTSSIM_SHARED)
-	@$(MKDIR) $(BUILD_DIR)/.sgx_static_urts
-	@$(RM) -f $(BUILD_DIR)/.sgx_static_urts/*
-	cd $(BUILD_DIR)/.sgx_static_urts && \
-	$(AR) x $(COMMON_DIR)/se_wrapper/libwrapper.a && \
-	$(AR) x $(VTUNE_DIR)/sdk/src/ittnotify/libittnotify.a && \
-	$(RM) -f se_event.o
-	$(AR) rsD $@ $(OBJ) $(OBJ6) $(BUILD_DIR)/.sgx_static_urts/*.o
-
-$(LIBURTSSIM_STATIC_WITH_EVENT): $(LIBURTSSIM_SHARED)
 	@$(MKDIR) $(BUILD_DIR)/.sgx_static_urts
 	@$(RM) -f $(BUILD_DIR)/.sgx_static_urts/*
 	cd $(BUILD_DIR)/.sgx_static_urts && \
@@ -207,7 +196,7 @@ $(LIBURTS_DEPLOY):../urts_deploy.c
 
 .PHONY: clean
 clean::
-	@$(RM) *.o $(LIBURTSSIM_SHARED) $(LIBURTSSIM_STATIC) $(LIBURTSSIM_STATIC_WITH_EVENT) $(LIBURTS_DEPLOY) $(LIBURTSSIM_DEBUG) $(LIBURTSSIM_SHARED).orig 
+	@$(RM) *.o $(LIBURTSSIM_SHARED) $(LIBURTSSIM_STATIC) $(LIBURTS_DEPLOY) $(LIBURTSSIM_DEBUG) $(LIBURTSSIM_SHARED).orig 
 	@$(RM) $(BUILD_DIR)/$(LIBURTSSIM_SHARED) $(BUILD_DIR)/$(LIBURTS_DEPLOY) $(BUILD_DIR)/$(LIBURTSSIM_DEBUG)
 	$(MAKE) -C $(COMMON_DIR)/se_wrapper                                    clean
 	$(MAKE) -C $(SIM_DIR)/driver_api/                                      clean
